basic horizon app and oauth structure
